; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_notify.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_notify(%struct.MPContext* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.MPContext*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.MPContext*, %struct.MPContext** %4, align 8
  %8 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %7, i32 0, i32 0
  store i32 1, i32* %8, align 4
  %9 = load %struct.MPContext*, %struct.MPContext** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @command_event(%struct.MPContext* %9, i32 %10, i8* %11)
  %13 = load %struct.MPContext*, %struct.MPContext** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @mp_client_broadcast_event(%struct.MPContext* %13, i32 %14, i8* %15)
  ret void
}

declare dso_local i32 @command_event(%struct.MPContext*, i32, i8*) #1

declare dso_local i32 @mp_client_broadcast_event(%struct.MPContext*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
